// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Upload drag demo works fine 1`] = `
<drag>
  <wx-view
    class="wrapper"
  >
    <t-upload
      disabled="{{true}}"
      draggable="{{true}}"
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example4.png",
          },
          Object {
            "name": "uploaded2.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example6.png",
          },
          Object {
            "name": "uploaded3.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example5.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:click="handleClick"
      bind:drop="handleDrop"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</drag>
`;

exports[`Upload Upload messageFile demo works fine 1`] = `
<messageFile>
  <wx-view
    class="wrapper"
  >
    <t-upload
      config="{{
        Object {
          "count": 1,
        }
      }}"
      disabled="{{true}}"
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example4.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      source="messageFile"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</messageFile>
`;

exports[`Upload Upload multiple demo works fine 1`] = `
<multiple>
  <wx-view
    class="wrapper"
  >
    <t-upload
      disabled="{{true}}"
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example4.png",
          },
          Object {
            "name": "uploaded2.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example6.png",
          },
          Object {
            "name": "uploaded3.png",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example5.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:click="handleClick"
      bind:remove="handleRemove"
      bind:sort-end="handleSortEnd"
      bind:success="handleSuccess"
    />
  </wx-view>
</multiple>
`;

exports[`Upload Upload single demo works fine 1`] = `
<single>
  <wx-view
    class="wrapper"
  >
    <t-upload
      disabled="{{true}}"
      files="{{Array []}}"
      max="{{1}}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:add="handleAdd"
      bind:remove="handleRemove"
    />
  </wx-view>
</single>
`;

exports[`Upload Upload status demo works fine 1`] = `
<status>
  <wx-view
    class="wrapper"
  >
    <t-upload
      disabled="{{true}}"
      files="{{
        Array [
          Object {
            "name": "uploaded1.png",
            "status": "loading",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example4.png",
          },
          Object {
            "name": "uploaded2.png",
            "percent": 68,
            "status": "loading",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example5.png",
          },
          Object {
            "name": "uploaded3.png",
            "status": "reload",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example6.png",
          },
          Object {
            "name": "uploaded4.png",
            "status": "failed",
            "type": "image",
            "url": "https://tdesign.gtimg.com/mobile/demos/example5.png",
          },
        ]
      }}"
      gridConfig="{{
        Object {
          "column": 4,
          "height": 160,
          "width": 160,
        }
      }}"
      mediaType="{{
        Array [
          "video",
          "image",
        ]
      }}"
      bind:click="handleClick"
      bind:remove="handleRemove"
      bind:success="handleSuccess"
    />
  </wx-view>
</status>
`;
